# go-sse-ts-server

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod
cmd/server/: BUILD.bazel  main.go
internal/feed/: BUILD.bazel  feed.go
internal/hub/: BUILD.bazel  hub.go
internal/sse/: BUILD.bazel  handler.go
