load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/johanastborg/go-sse-ts-server/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/feed",
        "//internal/hub",
        "//internal/sse",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
